2010-11-03  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/aaaGenerics.R: fixed bug in addSpring. Still doesn't work horizontally

	* R/aaaGenerics.R: changed default anchor value to c(-1,1) or
	NW. This can be adjusted through through the option "gw:tcltkDefaultAnchor".

2010-11-01  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gslider.R (modifyLabel): added from=vector argument where
	values are run through sort(unique(...))

2010-10-30  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtable.R (.toCharacter.numeric): put round argument in
	constructor for Liviu

2010-10-20  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gimage.R: moved code into svalue<- method. Fix bug if no image
	initially specified.

2010-10-18  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gdf.R: fixed bug in svalue (doubled up); svalue<- implemented
	(index=TRUE needed)

2010-10-16  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gcheckbox.R: added use.togglebutton feature

2010-10-15  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtable.R (.populateTable): fix to single column tables to
	avoid splitting on , or +

	* R/aaaGenerics.R: fixed focus<- method for tkwin

2010-10-05  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtext.R (ladd): changed what is shown after text is added. Now
	moves to top, not bottom

	* R/aaaGenerics.R: fixed error with fill argument to add method
	for containers.

2010-09-18  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gnotebook.R: bug fix for closebuttons=TRUE

	* R/gpanedgroup.R: bug fix in svalue() method

2010-08-08  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gnotebook.R: added [ method to get children


2010-08-01  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gcalendar.R: added calendar selector

2010-07-26  john verzani  <verzani@john-verzanis-macbook-pro.local>
